03-argocd-apps/manifests/hello/templates/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-argocd-service
spec:
  selector:
    app: hello-argocd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
